tools/tests/errors/surf_num_06.experr
cannot convert String to Float
